--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "d3": "^7.6.1",
     "d3-dsv": "^3.0.1",
     "d3-request": "^1.0.6",
-    "nice-react-ticker": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
+    "react-ticker": "^1.3.2",
     "recharts": "^2.1.15",
     "web-vitals": "^2.1.4"
   },
