--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3": "^7.6.1",
     "d3-dsv": "^3.0.1",
     "d3-request": "^1.0.6",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
