--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
-    "react-ticker": "^1.3.2",
+    "react-transition-group": "^4.4.5",
     "recharts": "^2.1.15",
     "web-vitals": "^2.1.4"
   },
